--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -194,7 +194,7 @@ body {
 
 body {
   color: var(--text);
-  /* background: var(--background); */
+  background: var(--min);
   font-size: 1rem;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
