--- a/src/components/Qualifications/QualificationsList.module.css
+++ b/src/components/Qualifications/QualificationsList.module.css
@@ -1,11 +1,11 @@
 .container {
-  margin: 4rem 2rem 2rem 2rem;
+  padding-top: 2rem;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(28rem, 1fr));
   gap: 2rem;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 37.5em) {
   .container {
     grid-template-columns: 1fr;
   }
