style: Create a separate MainContainer component to handle padding across website components

--- a/src/components/layout/MainContainer.module.css
+++ b/src/components/layout/MainContainer.module.css
@@ -1,9 +1,9 @@
 .container {
-  margin: 4rem 0 4rem 0;
+  padding: 2rem;
 }
 
 @media (max-width: 37.5em) {
   .container {
-    margin: 4rem 0 3rem 0;
+    padding: 1rem;
   }
 }
