--- a/src/components/home/Skills.module.css
+++ b/src/components/home/Skills.module.css
@@ -1,9 +1,7 @@
 .skills {
-  padding: 3rem 1rem;
   background-color: var(--background);
   color: var(--text);
-  max-width: 75rem;
-  margin: 0 auto;
+  padding-top: 4rem;
 }
 
 .skills h2 {
@@ -17,7 +15,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
   gap: 2rem;
-  margin: 0 1.5rem;
+  padding: 0 4rem 4rem 4rem;
 }
 
 .card {
