--- a/src/components/blogs/CodeBlock.module.css
+++ b/src/components/blogs/CodeBlock.module.css
@@ -12,7 +12,7 @@
 /* Main pre block */
 .block {
   margin: 0;
-  padding: 1rem;
+  padding: 2.5rem 1rem 1rem 1rem;
   overflow-x: auto;
   white-space: pre;
   border: 1px solid rgba(var(--gray-rgb), 0.3);
