--- a/src/components/home/MediaCarousel.module.css
+++ b/src/components/home/MediaCarousel.module.css
@@ -1,10 +1,16 @@
+.heading {
+  text-align: center;
+  font-size: 1.85rem;
+  color: var(--accent);
+}
+
 .carousel {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 2rem;
   position: relative;
-  padding: 15rem 1rem;
+  padding: 14rem 1rem;
   overflow: hidden;
   perspective: 1000px;
 }
@@ -18,7 +24,7 @@
   background-color: black;
   cursor: pointer;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
-  opacity: 0.3;
+  opacity: 0.8;
   transition:
     transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1),
     opacity 0.5s ease,
@@ -67,6 +73,10 @@
 }
 
 @media(max-width: 48em) {
+  .heading {
+    font-size: 1.6rem;
+  }
+
   .left {
     transform: translateX(-12rem) scale(0.9) rotateY(10deg);
     z-index: 2;
@@ -80,7 +90,7 @@
 
 @media(max-width: 37.5em) {
   .carousel {
-    padding: 8rem 1rem;
+    padding: 9rem 1rem;
   }
 
   .card {
