feat: Add two blogs about setup proxy server, and how to consume it from mobile android, linux, and windows

--- a/src/components/blogs/mdxComponents.module.css
+++ b/src/components/blogs/mdxComponents.module.css
@@ -38,3 +38,14 @@
 .paragraph {
   margin: 2rem 0 1rem;
 }
+
+/* mdxComponents.module.css */
+
+.responsiveImage {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 1.5rem auto;
+  border-radius: 2px;
+  box-shadow: 0 2px 12px rgba(0, 0, 0, 0.06);
+}
